| Summary: | ASTERISK-25110: res_resolver_unbound.c compilation failure: SIGURG is undeclared in func unbound_resolver_stop | ||
| Reporter: | John Bigelow (jbigelow) | Labels: | |
| Date Opened: | 2015-05-20 12:48:20 | Date Closed: | 2015-05-20 14:44:20 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | Resources/General |
| Versions: | SVN | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Asterisk git master branch, Debian squeeze, 32bit, lib unbound 1.5.3, pjproject 2.3 | Attachments: | |
| Description: | {{res_resolver_unbound.c}} fails to compile due to {{SIGURG}} in func {{unbound_resolver_stop}} not being declared. Adding {{#include <signal.h>}} to {{res_resolver_unbound.c}} allows it to successfully compile.
Patch is up for review at: https://gerrit.asterisk.org/#/c/494/ | ||
| Comments: | |||