res/res_resolver_unbound.c: Add missing include of signal.h

ASTERISK-25110 #close
Reported by: John Bigelow

Change-Id: I99a9d93f066f265357b647b8e99a75e45da5a39f